First working version of new design