@@ -28,7 +28,6 @@ import static jdk.tools.jlink.internal.TaskHelper.JLINK_BUNDLE;
 
 import java.io.BufferedInputStream;
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.PrintWriter;
@@ -50,7 +49,6 @@ import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
 import java.util.HashMap;
@@ -74,8 +72,6 @@ import jdk.tools.jlink.internal.Jlink.PluginsConfiguration;
 import jdk.tools.jlink.internal.TaskHelper.BadArgs;
 import jdk.tools.jlink.internal.TaskHelper.Option;
 import jdk.tools.jlink.internal.TaskHelper.OptionsHelper;
-import jdk.tools.jlink.internal.plugins.LegalNoticeFilePlugin;
-import jdk.tools.jlink.plugin.Plugin;
 import jdk.tools.jlink.plugin.PluginException;
 
 /**
@@ -91,6 +87,7 @@ public class JlinkTask {
 
     private static final TaskHelper taskHelper
             = new TaskHelper(JLINK_BUNDLE);
+    private static final String JLINK_MOD_NAME = "jdk.jlink";
 
     // Flag for scratch task validation in run-time image mode
     private final boolean isScratch;
@@ -248,9 +245,8 @@ public class JlinkTask {
 
     public static final String OPTIONS_RESOURCE = "jdk/tools/jlink/internal/options";
     public static final String RESPATH_PATTERN = "jdk/tools/jlink/internal/fs_%s_files";
-    public static final String CLI_RESOURCE_FILE = "jdk/tools/jlink/internal/cli_cmd.txt";
-    public static final String RUNIMAGE_LINK_STAMP = "jdk/tools/jlink/internal/runtimeimage.link.stamp";
-
+    // The diff file per module
+    public static final String DIFF_PATTERN = "jdk/tools/jlink/internal/diff_%s";
 
     int run(String[] args) {
         if (log == null) {
@@ -451,7 +447,7 @@ public class JlinkTask {
         // Then create the Plugin Stack
         ImagePluginStack stack = ImagePluginConfiguration.parseConfiguration(
             taskHelper.getPluginsConfig(options.output, options.launchers,
-                    imageProvider.targetPlatform, config), getMergedCliArgs(config.linkFromRuntimeImage()));
+                    imageProvider.targetPlatform, config));
 
         //Ask the stack to proceed
         stack.operate(imageProvider);
@@ -566,37 +562,16 @@ public class JlinkTask {
 
         // Perform some setup for run-time image based links
         if (config.linkFromRuntimeImage()) {
-            // Check if the current run-time image has already been created using
-            // a run-time image link. If it is, fail the link as recursive
-            // links are not allowed.
-            try (InputStream in = JlinkTask.class.getModule().getResourceAsStream(RUNIMAGE_LINK_STAMP)) {
-                if (in != null) {
-                    String msg = taskHelper.getMessage("err.runtime.link.recursive");
-                    throw new IllegalArgumentException(msg);
-                }
+            // Disallow a link with jdk.jlink included if we are performing a
+            // runtime link.
+            if (cf.findModule(JLINK_MOD_NAME).isPresent()) {
+                String msg = taskHelper.getMessage("err.runtime.link.recursive");
+                throw new IllegalArgumentException(msg);
             }
 
             // Print info message when a run-image link is being performed
             if (log != null) {
-                Path detailsFile = Path.of("runtime-jlink-details.txt");
-                String verboseHint = " " + taskHelper.getMessage("runtime.link.info.hint", detailsFile.toString());
-                if (verbose) {
-                    // Don't mention the hint if we already use --verbose.
-                    verboseHint = "";
-                }
-                log.println(taskHelper.getMessage("runtime.link.info", verboseHint));
-                List<String> mergedCLIArgs = getMergedCliArgs(config.linkFromRuntimeImage());
-                if (verbose) {
-                    // Log to standard out with detailed info
-                    logPackagedModuleEquivalent(log, mergedCLIArgs, opts, verbose);
-                } else {
-                    // Log to a file 'runtime-jlink-details.txt' with the details
-                    // how the runtime-derived image can get produced using
-                    // packaged modules
-                    try (PrintWriter fileOut = new PrintWriter(new FileOutputStream(detailsFile.toFile()))) {
-                        logPackagedModuleEquivalent(fileOut, mergedCLIArgs, opts, verbose);
-                    }
-                }
+                log.println(taskHelper.getMessage("runtime.link.info"));
             }
         }
 
@@ -716,113 +691,6 @@ public class JlinkTask {
             throw new IllegalArgumentException(taskHelper.getMessage(
                     "err.cannot.read.module.info", modInfoPath), exp);
         }
-    }
-
-    /**
-     * Log a message when a run-time image link is being performed and mention
-     * the equivalent packaged-module based link.
-     *
-     * @param logWriter
-     *            The log to print to.
-     * @param mergedCLI
-     *            The merged command line parameters of the persisted link of
-     *            the run-time image being used and the current command line
-     *            arguments.
-     * @param opts
-     *            The parsed options of the current command line arguments.
-     */
-    private static void logPackagedModuleEquivalent(PrintWriter logWriter,
-            List<String> mergedCLI, OptionsValues opts, boolean isVerbose) {
-        // parse options, produce plugins maps.
-        TaskHelper scratchTaskHelper = new TaskHelper(JLINK_BUNDLE);
-        OptionsHelper<JlinkTask> scratchOptionsHelper = scratchTaskHelper.newOptionsHelper(JlinkTask.class, recognizedOptions);
-        JlinkTask scratch = new JlinkTask(true);
-
-        Map<Plugin, List<Map<String, String>>> pluginMaps = null;
-        try {
-            scratchOptionsHelper.handleOptions(scratch, mergedCLI.toArray(new String[] {}));
-            pluginMaps = scratchTaskHelper.getPluginMaps();
-        } catch (BadArgs e) {
-            throw new AssertionError("handling of scratch options failed", e);
-        }
-        List<Plugin> forwardingPlugins = pluginMaps.keySet()
-                                                        .stream()
-                                                        .filter(p -> p.runTimeImageLinkPersistent())
-                                                        .toList();
-        List<String> jlinkCmd = new ArrayList<>();
-        jlinkCmd.add("jlink");
-        // Iterate over recognized opts to figure out options used
-        if (opts.bindServices) {
-            jlinkCmd.add("--bind-services");
-        }
-        if (opts.suggestProviders) {
-            jlinkCmd.add("--suggest-providers");
-        }
-        if (opts.ignoreSigning) {
-            jlinkCmd.add("--ignore-signing");
-        }
-        // --add-modules is a required option, but the JLink API calls this with
-        // dummy options
-        if (!opts.addMods.isEmpty()) {
-            jlinkCmd.add("--add-modules");
-            jlinkCmd.add(opts.addMods.stream().collect(Collectors.joining(",")));
-        }
-        if (!opts.limitMods.isEmpty()) {
-            jlinkCmd.add("--limit-modules");
-            jlinkCmd.add(opts.limitMods.stream().collect(Collectors.joining(",")));
-        }
-        // Launchers carry forward, so we need to use the scratch JlinkTask
-        if (!scratch.options.launchers.isEmpty()) {
-            for (Map.Entry<String, String> entry: scratch.options.launchers.entrySet()) {
-                jlinkCmd.add("--launcher");
-                jlinkCmd.add(entry.getKey() + "=" + entry.getValue());
-            }
-        }
-        String outputPath = "";
-        if (opts.output != null) {
-            outputPath = opts.output.toString();
-            jlinkCmd.add("--output");
-            jlinkCmd.add(outputPath);
-        }
-        logWriter.println(taskHelper.getMessage("runtime.link.equivalent.packaged.modules", outputPath));
-        logWriter.print("    ");
-        logWriter.print(jlinkCmd.stream().collect(Collectors.joining(" ")));
-        for (Plugin p: forwardingPlugins) {
-            List<Map<String, String>> configs = pluginMaps.get(p);
-            for (Map<String, String> config: configs) {
-                String value = config.get(p.getName());
-                // Work-around for --dedup-legal-notices which auto-enables,
-                // carries forward and doesn't allow to be run without argument
-                // value from the CLI.
-                if (p instanceof LegalNoticeFilePlugin && value == null) {
-                    continue;
-                }
-                logWriter.print(" --" + p.getName());
-                if (value != null) {
-                    logWriter.print(" " + value);
-                }
-            }
-        }
-        logWriter.println();
-        if (isVerbose) {
-            logWriter.println(); // empty line to separate from modules output
-        }
-    }
-
-    private static List<String> getMergedCliArgs(boolean isRunTimeImageLink) throws IOException {
-        // First read in the stored CLI args that were used for the input
-        // run-time image
-        List<String> merged = new ArrayList<>();
-        if (isRunTimeImageLink) {
-            try (InputStream in = JlinkTask.class.getModule().getResourceAsStream(CLI_RESOURCE_FILE)) {
-                CommandLine.loadCmdFile(Objects.requireNonNull(in, "Old CLI args not being tracked in jimage"),
-                                merged);
-            }
-        }
-        for (String arg: optionsHelper.getInputCommand()) {
-            merged.add(arg);
-        }
-        return Collections.unmodifiableList(merged);
     }
 
     /*
